# public-goods-token-comparison

./: $TEC1pager.ipynb  README.md  analysis.ipynb  analysis_updated.ipynb  data_collection_updated.ipynb  pyproject.toml
data/: TEC-prices.csv  combined_updated.csv  public_goods_prices.csv
