[tool.poetry]
name = "tec1pager"
version = "0.1.0"
description = "$TEC Token Analysis in Python"
authors = ["Shawn Anderson <shawn@longtailfinancial.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
jupyterlab = "^4.0.6"
pandas = "^2.1.0"
hvplot = "^0.8.4"
panel = "^1.2.2"
param = "^1.13.0"
pycoingecko = "^3.1.0"
pyparsing = "^3.1.1"
plotly = "^5.22.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
